Convert state manager to a service

--- a/Respi55/AndroidManifest.xml
+++ b/Respi55/AndroidManifest.xml
@@ -59,6 +59,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="name.vdg.respi55.FullscreenActivity" />
         </activity>
+        <service
+            android:name=".RespiStateManager" >
+        </service>
+
     </application>
 
 </manifest>
